--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -599,7 +599,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 } 
 
 
-.theme-dark .tooltipBlack-PPG47z {
+.theme-dark .tooltipPrimary-1d1ph4 {
     background: linear-gradient(1deg, #000000 0%, #008c99 47%, #000000 100%);
 }
   
