--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -733,7 +733,7 @@
 
 
 
-.theme-dark .tooltipBlack-PPG47z {
+.theme-dark .tooltipPrimary-1d1ph4 {
 	background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%) !important;
 	border: 2px solid rgba(204, 227, 246, 0.60);
 	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
