--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -625,7 +625,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 } 
 
 
-.theme-dark .tooltipBlack-PPG47z {
+.theme-dark .tooltipPrimary-1d1ph4 {
     background: linear-gradient(1deg, #000000 0%, #728e3d 47%, #000000 100%);
 }
   
