--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -992,12 +992,12 @@
     border: none;
 }
 
-.theme-dark .tooltipBlack-PPG47z {
+.theme-dark .tooltipPrimary-1d1ph4 {
     background: linear-gradient(230deg, #582060 0%, #3D1E59 100%);
     box-shadow: 3px 4px 12px 3px rgba(0, 0, 0, 0.6);
 }
 
-.theme-dark .tooltipBlack-PPG47z .tooltipPointer-3ZfirK {
+.theme-dark .tooltipPrimary-1d1ph4 .tooltipPointer-3ZfirK {
     border-top-color: #582060;
 }
 
