--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -1111,11 +1111,11 @@
 	border-top-color: #e73434;
 }
 
-.theme-dark .tooltipBlack-PPG47z {
+.theme-dark .tooltipPrimary-1d1ph4 {
     background-color: #731838;
 }
 
-.theme-dark .tooltipBlack-PPG47z .tooltipPointer-3ZfirK {
+.theme-dark .tooltipPrimary-1d1ph4 .tooltipPointer-3ZfirK {
     border-top-color: #731838;
 }
 
