--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -1155,11 +1155,11 @@
     color: white !important;
 }
 
-.theme-dark .tooltipBlack-PPG47z .tooltipPointer-3ZfirK {
+.theme-dark .tooltipPrimary-1d1ph4 .tooltipPointer-3ZfirK {
     border-top-color: #f4acc5;
 }
 
-.theme-dark .tooltipBlack-PPG47z {
+.theme-dark .tooltipPrimary-1d1ph4 {
     background-color: rgba(244, 172, 197, 0.78);
 }
   
