--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -1144,11 +1144,11 @@
     color: white !important;
 }
 
-.theme-dark .tooltipBlack-PPG47z .tooltipPointer-3ZfirK {
+.theme-dark .tooltipPrimary-1d1ph4 .tooltipPointer-3ZfirK {
     border-top-color: #8da0e0;
 }
 
-.theme-dark .tooltipBlack-PPG47z {
+.theme-dark .tooltipPrimary-1d1ph4 {
     background-color: rgba(141, 160, 224, 0.78);
 }
   
