--- a/My_Theme_Collection/Winter_Returns.theme.css
+++ b/My_Theme_Collection/Winter_Returns.theme.css
@@ -1145,11 +1145,11 @@
     color: white !important;
 }
 
-.theme-dark .tooltipBlack-PPG47z .tooltipPointer-3ZfirK {
+.theme-dark .tooltipPrimary-1d1ph4 .tooltipPointer-3ZfirK {
     border-top-color: #6b82ce;
 }
 
-.theme-dark .tooltipBlack-PPG47z {
+.theme-dark .tooltipPrimary-1d1ph4 {
     background-color: rgba(107, 130, 206, 0.78);
 }
   
