--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -1590,7 +1590,7 @@
 }
 
 .theme-dark .searchHeader-2XoQg7 {
-    color: white; 
+    background-color: transparent;
     box-shadow: none;
 }
 
@@ -1611,6 +1611,11 @@
 	background-color: rgba(0, 0, 0, 0.42) !important;
 	opacity: .4 !important;
 }
+
+.emptyChannelIcon-3IXV5M {
+	border-radius: 30px;
+	background-color: rgba(0, 0, 0, .26);
+  }
 
 .theme-dark .messagesPopout-24nkyi {
 	background-color: transparent;
@@ -1651,41 +1656,14 @@
 	margin-top: 2px;
 }
 
-.searchResult-9tQ1uo.expanded-w_LCGl {
-	background: none;
-}
-
-
-
-
-.searchResultMessage-1fxgXh {
-	padding: 7px 0;
-}
-
-.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl .searchResultMessage-1fxgXh.hit-1fVM9e {
-	border: none;
-	background-color: transparent;
-}
-
-.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl,
-.theme-dark .searchResult-9tQ1uo .searchResultMessage-1fxgXh.hit-1fVM9e,
-.channelSeparator-1DOiGt:before {
-	border: none;
-}
-
-.theme-dark .searchResult-9tQ1uo .hit-NLlWXA,
 .theme-dark .messageGroupWrapper-o-Zw7G:hover .actionButtons-1sUUug {
 	background: none;
 	box-shadow: none;
 }
 
-.theme-dark .searchResult-9tQ1uo:before,
-.theme-dark .searchResult-9tQ1uo:after {
-	background-image: none;
-}
 
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .jumpButton-JkYoYK,
+.theme-dark .button-11zvza,
 .theme-dark .collapseButton-oSNpPX,
 .jumpButton-2dvRSC {
 	background-color: rgba(0, 0, 0, 0.56);
@@ -1868,7 +1846,7 @@
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
 }
 
-.theme-dark .channelSeparator-1X1FuH .channelName-1JRO3C {
+.theme-dark .channelName-1JRO3C, .searchResult-9tQ1uo {
 	color: #fff;
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.40) 100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
@@ -1877,6 +1855,18 @@
 	padding: 12px 7px;
 	border-radius: 40px;
 }
+
+.tab-2j5AEF, .tab-2j5AEF:active, .tab-2j5AEF:hover {
+	color: white;
+  }
+  
+  .theme-dark .tab-2j5AEF.selected-2LAck8 {
+	background-color: rgba(65, 95, 132, 0.46);
+  }
+  
+  .tab-2j5AEF:hover {
+	background-color: rgba(65, 95, 132, 0.96);
+  }
 
 
 .bda-dark .theme-dark .slide-2pHaq5 {
