--- a/My_Theme_Collection/CatJar.theme.css
+++ b/My_Theme_Collection/CatJar.theme.css
@@ -1375,22 +1375,35 @@
   color: white;
 }
 
+.emptyChannelIcon-3IXV5M {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .26);
+}
+
 .searchHeader-2XoQg7 {
-  color: #9b9b9b;
+  color: rgba(0, 0, 0, .26);
   box-shadow: none;
+}
+
+.searchResult-9tQ1uo {
+  overflow: visible;
+  background-color: rgba(0, 0, 0, .23);
 }
 
 .searchResultsWrap-3-pOjs {
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #805d4c 100%);
 }
 
-.tab-EiCZG6.selected-16te-P, .tab-EiCZG6:hover {
-  border-bottom: 2px solid white;
+.tab-2j5AEF, .tab-2j5AEF:active, .tab-2j5AEF:hover {
   color: white;
 }
 
-.channelSeparator-1DOiGt:before {
-  border: none;
+.theme-dark .tab-2j5AEF.selected-2LAck8 {
+  background-color: #805d4c;
+}
+
+.tab-2j5AEF:hover {
+  background-color: #946f5e;
 }
 
 .channelName-1JRO3C {
@@ -1402,17 +1415,6 @@
   margin-top: 5px;
 }
 
-.searchResult-9tQ1uo:before, .searchResult-9tQ1uo:after {
-  background: none;
-}
-
-.searchResultMessage-1fxgXh.hit-1fVM9e {
-  box-shadow: none;
-  background-color: rgba(0, 0, 0, .23);
-  border: none;
-  border-radius: 6px;
-}
-
 .searchResultMessage-1fxgXh {
   overflow: visible;
 }
@@ -1422,7 +1424,7 @@
   background-color: rgba(0, 0, 0, .26);
 }
 
-.jumpButton-JkYoYK, .jumpButton-3DTcS_, .jumpButton-2dvRSC {
+.button-11zvza, .jumpButton-3DTcS_, .jumpButton-2dvRSC {
   border-radius: 6px;
   padding: 4px 13px;
   background-color: #805d4c;
@@ -1430,15 +1432,6 @@
   color: white;
 }
 
-.searchResult-9tQ1uo.expanded-w_LCGl {
-  border: none;
-  background: none;
-}
-
-.expanded-w_LCGl .searchResultMessage-1fxgXh.hit-1fVM9e {
-  background-color: rgba(0, 0, 0, .46);
-  border-color: transparent;
-}
 
 .members-1998pB {
   background-color: rgba(0,0,0,.3);
