--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -1534,7 +1534,7 @@
   background-color: rgba(0, 0, 0, .26);
 }
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .jumpButton-JkYoYK,
+.theme-dark .button-11zvza,
 .theme-dark .collapseButton-oSNpPX,
 .jumpButton-2dvRSC {
   background-color: #129b1a; 
@@ -1654,22 +1654,26 @@
 }
 
 .theme-dark .searchHeader-2XoQg7 {
-  color: white; 
+  background-color: rgba(0, 0, 0, .4);
   box-shadow: none;
 }
 
-.tab-EiCZG6, .totalResults-1yK_Ym {
-  padding: 15px 0;
-  opacity: .6;
+.message-1Ng5AR {
+  padding: 16px 0;
 }
 
-.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl {
-  border: none;
+.tab-2j5AEF, .tab-2j5AEF:active, .tab-2j5AEF:hover {
+  color: white;
 }
-.searchResult-9tQ1uo.expanded-w_LCGl {
-  border-radius: 12px;
+
+.theme-dark .tab-2j5AEF.selected-2LAck8 {
+  background-color: #129b1a;
 }
-.searchResult-9tQ1uo.expanded-w_LCGl,
+
+.tab-2j5AEF:hover {
+  background-color: #04820C;
+}
+
 .detailsBlock-FoDTGA {
   background: none;
 }
@@ -1678,32 +1682,20 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 
+.emptyChannelIcon-3IXV5M {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .26);
+}
+
 .searchResult-9tQ1uo {
   overflow: visible;
+  background-color: rgba(0, 0, 0, .53);
 }
-.theme-dark .searchResult-9tQ1uo .searchResultMessage-1fxgXh.hit-1fVM9e {
-  border: 2px solid black;
-}
-.theme-dark .searchResult-9tQ1uo .hit-NLlWXA {
-  background-color: rgba(0,0,0,0.12);
-  box-shadow: none;
-}
-.theme-dark .channelSeparator-1DOiGt:before {
-  border-color: transparent;
-}
-.theme-dark .channelSeparator-1X1FuH .channelName-1JRO3C {
+.theme-dark .channelName-1JRO3C {
   background-color: #129b1a;
   padding: 7px 4px;
 }
-.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl .searchResultMessage-1fxgXh.hit-1fVM9e {
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
-  background-color: rgba(0,0,0,0.7);
-}
-.theme-dark .searchResult-9tQ1uo:after,
-.theme-dark .searchResult-9tQ1uo:before {
-  background-image: none;
-}
+
 .container-2Pjhx- {
   color: white;
 }
