--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -1554,7 +1554,7 @@
   background-color: rgba(0, 0, 0, .26);
 }
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .jumpButton-JkYoYK,
+.theme-dark .button-11zvza,
 .theme-dark .collapseButton-oSNpPX,
 .jumpButton-2dvRSC {
   background-color: #ca9e73; 
@@ -1678,18 +1678,6 @@
   box-shadow: none;
 }
 
-.tab-EiCZG6, .totalResults-1yK_Ym {
-  padding: 15px 0;
-  opacity: .6;
-}
-
-.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl {
-  border: none;
-}
-.searchResult-9tQ1uo.expanded-w_LCGl {
-  border-radius: 12px;
-}
-.searchResult-9tQ1uo.expanded-w_LCGl,
 .detailsBlock-FoDTGA {
   background: none;
 }
@@ -1698,34 +1686,37 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 
+.message-1Ng5AR {
+  padding: 16px 0;
+}
 
+.tab-2j5AEF, .tab-2j5AEF:active, .tab-2j5AEF:hover {
+  color: white;
+}
+
+.theme-dark .tab-2j5AEF.selected-2LAck8 {
+  background-color: #ca9e73;
+}
+
+.tab-2j5AEF:hover {
+  background-color: #d59e68;
+}
+
+.emptyChannelIcon-3IXV5M {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .26);
+}
 
 .searchResult-9tQ1uo {
   overflow: visible;
+  background-color: rgba(0, 0, 0, .53);
 }
-.theme-dark .searchResult-9tQ1uo .searchResultMessage-1fxgXh.hit-1fVM9e {
-  border: 2px solid black;
-}
-.theme-dark .searchResult-9tQ1uo .hit-NLlWXA {
-  background-color: rgba(0,0,0,0.12);
-  box-shadow: none;
-}
-.theme-dark .channelSeparator-1DOiGt:before {
-  border-color: transparent;
-}
-.theme-dark .channelSeparator-1X1FuH .channelName-1JRO3C {
+
+.theme-dark .channelName-1JRO3C {
   background-color: #ca9e73;
   padding: 7px 4px;
 }
-.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl .searchResultMessage-1fxgXh.hit-1fVM9e {
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
-  background-color: rgba(0,0,0,0.7);
-}
-.theme-dark .searchResult-9tQ1uo:after,
-.theme-dark .searchResult-9tQ1uo:before {
-  background-image: none;
-}
+
 .container-2Pjhx- {
   color: white;
 }
