--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -1315,7 +1315,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 .theme-dark .searchHeader-2XoQg7 {
-    color: white; 
+    background-color: rgba(0, 0, 0, .3);
     box-shadow: none;
 }
 
@@ -1379,20 +1379,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 
-
-.theme-dark .searchHeader-2XoQg7 .tab-EiCZG6.selected-16te-P, .theme-dark .searchHeader-2XoQg7 .tab-EiCZG6:hover {
-    border-bottom: 2px solid #728e3d;
-}
-
-.tab-EiCZG6, .totalResults-1yK_Ym {
-    opacity: .7;
-}
-
-.channelSeparator-1DOiGt:before {
-    border-bottom: none;
-}
-
-.theme-dark .channelSeparator-1X1FuH .channelName-1JRO3C {
+.theme-dark .channelName-1JRO3C {
     background-color: #728e3d;
 }
   
@@ -1400,31 +1387,30 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     padding: 12px;
 }
 
-.searchResult-9tQ1uo:after, 
-.searchResult-9tQ1uo:before {
-    display: none;
-}
+.searchResult-9tQ1uo {
+    overflow: visible;
+    background-color: rgba(0, 0, 0, .23);
+  }
 
-.theme-dark .searchResult-9tQ1uo .searchResultMessage-1fxgXh.hit-1fVM9e {
-    border: none;
-}
+.tab-2j5AEF, .tab-2j5AEF:active, .tab-2j5AEF:hover {
+    color: white;
+  }
   
-.theme-dark .searchResult-9tQ1uo .hit-NLlWXA {
-    background-color: #1e2024;
-    box-shadow: none;
-}
+  .theme-dark .tab-2j5AEF.selected-2LAck8 {
+    background-color: #728e3d;
+  }
   
-.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl .searchResultMessage-1fxgXh.hit-1fVM9e {
-    border: none;
-    background-color: black;
-}
+  .tab-2j5AEF:hover {
+    background-color: rgba(0, 0, 0, .3);
+  }
+
 
 .emptyChannelIcon-3IXV5M {
     border-radius: 4px;
     background-color: rgba(0, 0, 0, .26);
 }
 
-.theme-dark .jumpButton-JkYoYK,
+.theme-dark .button-11zvza,
 .theme-dark .jumpButton-3DTcS_,
 .theme-dark .collapseButton-oSNpPX,
 .jumpButton-2dvRSC {
